Fixed server list view dark mode issue

--- a/style/darkmode.css
+++ b/style/darkmode.css
@@ -4166,6 +4166,21 @@ h4.result-title .icon{
   background-color: #e6f19d;
 }
 
+.yui3-skin-sam .yui3-datatable-even .yui3-datatable-cell{
+  background-color: #3a3b3c;
+}
+
+.yui3-skin-sam .yui3-datatable-header{
+  color: #fff;
+}
+
+.yui3-skin-sam .yui3-datatable-columns .yui3-datatable-sorted, .yui3-skin-sam .yui3-datatable-sortable-column:hover{
+  background-color: #3a3b3c;
+}
+
+.fp-icon img{
+  filter: invert();
+}
 /* .action-menu .dropdown-toggle .icon {
   color: white;
 } */
